Closed
Bug 182673
Opened 23 years ago
Closed 23 years ago
Toolbar height remains the same when switching to small toolbar mode
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: spam, Assigned: sfraser_bugs)
References
Details
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.1) Gecko/20021126 Chimera/0.6+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.1) Gecko/20021126 Chimera/0.6+
When using small toolbar mode and the location field is in the toolbar, Chimera
doesn't make the toolbar less high which kind of defeats small toolbar mode's
purpose. The icons in small toolbar mode are 24x24 pixels, so the problem is the
location view's custom view which is probably set to a static 32 pixel height.
When its minimal height is 24 small toolbar mode will work perfectly, and it
will save a bit of space :)
Reproducible: Always
Steps to Reproduce:
1. Add location field to toolbar
2. Switch to a small mode for the toolbar
3. The height stays the same
Actual Results:
Nothing, that's the problem :)
Expected Results:
Make the toolbar height less.
Comment 1•23 years ago
|
||
Mail.app doesn't reduce the height either. I suspect this is an issue with the
Cocoa toolbar widget. Recommend WONTFIX.
Note that the small icons do affect horizontal stuff (more room).
Whiteboard: WONTFIX
See Acquisition (www.xlife.org) for proper text field in toolbar
behaviour.
Small toolbar mode should work regardless of what items are inside it,
and it's perfectly possible and easy to make it work in Chimera too.
When initializing your text field toolbar item, use the following
methods:
[whateverTheItemIsCalled setMinSize:NSMakeSize(minimumWidth,24)];
[whateverTheItemIsCalled setMaxSize:NSMakeSize(maximumWidth,32)];
Modify the view locationView in your BrowserWindow.nib and make the
field center vertically. That should do it, and the text field won't
become smaller, just the view hosting it.
Comment 3•23 years ago
|
||
This is a duplicate of bug 168699.
But I say go with this version since it allready has a simple fix in the
comments and a few votes.
Comment 4•23 years ago
|
||
Re comment 2 and comment 3, looks like both acquisition and Preview.app have the
requested functionality. Marking 168699 as dupe per comment #3. There's some
pretty pictures in the dupe.
Whiteboard: WONTFIX
Comment 5•23 years ago
|
||
*** Bug 168699 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•23 years ago
|
URL: Not related to a certain web page
Status: NEW → ASSIGNED
| Assignee | ||
Comment 7•23 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 8•23 years ago
|
||
the height of the navigation toolbar now adjusts appropriately when using the
"small icons" option. also tested the text-only, text and icon, and icon-only
cases, and they too adjust nicely.
vrfy'd fixed on 10.2.2 with 2002.12.03.04.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•