Reduce the min height of the location bar toolbar item, to allow the 'small icons only' toolbar view to be shorter. Bug 182673.